tp12/service2-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip
  namespace: groupede5lesbg
spec:
  selector:
    app: deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
