tp12/ingress.yml
  GNU nano 7.2                     ingress.yml                              apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motd-ingress
  namespace: groupede5lesbg
spec:
  ingressClassName: nginx
  rules:
  - host: groupede5lesbg.amnay.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clusterip
            port:
              number: 80
